add scen
